Update TomcatManager.ps1